# LLM-Telegram-Bot

./: .env.example  .env.test.example  .gitignore  Jenkinsfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: bot.yml  ci.yml  gateway.yml
argocd/: argocd-app.yaml
bot/: Dockerfile  main.py  pyproject.toml
bot/core/: config.py  requests.py
bot/handlers/: texting.py
bot/tests/: test_requests.py  test_texting.py
gateway/: Dockerfile  main.py  pyproject.toml
gateway/core/: config.py
gateway/routers/: gateway.py
gateway/tests/: test_gateway.py
helm/: Chart.yaml  values.yaml
helm/templates/: bot-deployment.yaml  gateway-deployment.yaml  gateway-service.yaml
terraform/: main.tf  secrets.tf  terraform.tfvars.example  variables.tf
