[project]
name = "LLM-Telegram-Bot"
version = "0.1.0"
description = "Telegram bot powered by a locally deployed LLM (Qwen2.5:1.5b) via Ollama, wrapped in a FastAPI gateway."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "bot",
    "gateway",
 ]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env_files    = [".env.test"]
testpaths = [
    "bot/tests",
    "gateway/tests",
]
pythonpath = [
    "bot",
    "gateway",
]
addopts = "--tb=short -v --cov --cov-report=term-missing -p no:cacheprovider"

[tool.coverage.run]
source = [
    "bot",
    "gateway",
]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]